<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToOutline="true"
        android:background="#090E05"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/unsplash_ws"
        android:layout_width="0dp"
        android:layout_height="411dp"
        android:src="@drawable/unsplash_ws"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/rectangle_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="124dp"
        android:layout_height="54dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="56dp"
        android:text="@string/action_sign_in"
        android:textAppearance="@style/sign_up"
        android:textStyle="bold"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/enter_passw"
        android:layout_width="116dp"
        android:layout_height="26dp"
        android:layout_marginStart="34dp"
        android:gravity="top"
        android:text="@string/enter_email"
        android:textAppearance="@style/enter_passw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:padding="15dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toBottomOf="@id/enter_passw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/enter_pa"
        android:layout_width="139dp"
        android:layout_height="26dp"
        android:layout_marginStart="34dp"
        android:gravity="top"
        android:text="@string/enter_passw"
        android:textAppearance="@style/re_enter_pa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="343dp"
        android:padding="15dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_pa" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="343dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/lightGreen"
        android:text="@string/next"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/next"
        android:layout_width="62dp"
        android:layout_height="27dp"
        android:gravity="top"
        android:text="@string/next"
        android:textAppearance="@style/next"
        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="9dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TextView
            android:id="@+id/already_hav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_hav"
            android:textAppearance="@style/already_hav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/txt_gotoregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Sign up"
            android:textAlignment="center"
            android:textColor="@color/lightGreen"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/already_hav"
            app:layout_constraintEnd_toEndOf="@+id/already_hav"
            app:layout_constraintStart_toEndOf="@+id/already_hav"
            app:layout_constraintTop_toBottomOf="@+id/already_hav" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>
